# SequenceModelLab

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  tmp
analysis/: grid_search.ipynb  lags_of_different_ssm_models.ipynb  var.ipynb
src/: create_visualizations.py  experiments.py  main.py  training.py  utils.py
src/algorithms/: discretization.py  misc.py  ssm.py  ssm_calc.py  ssm_init1D.py
src/backup/: backup.py  experiments.py  grid_search_exp.py  variance_exp.py  variance_exp_multiprocess.py
src/data_loaders/data_sets/: delay_data_set.py
src/experiments/: changing_lag.py  long_training_multiple_runs.py  rot_ablation.py
src/experiments/diag_complex_vs_block_diag/: tmp.py
src/experiments/learning_a_band/: learning_a_band_deter.py
src/experiments/linear/: changing_lag.py  long_training_multiple_runs.py  rot_ablation.py
src/experiments/linear_diagonal/: adam_anlges_initilization_low_freq.py  adam_anlges_initilization_polar.py  anlges_initilization.py  anlges_initilization_low_freq.py  anlges_initilization_polar.py  complex.py  limiting_to_distribution.py  real.py  tmp.py
src/experiments/no_B_training/: tmp.py
src/experiments/non_linear/: changing_lag.py  grid_search.py  long_training_multiple_runs.py  tmp.py  (+1 more)
src/loggers/: base_logger.py  ssm_logger.py
src/loss_function/: delay_loss_function.py
src/models/: LRNN.py  deep_ssm.py  ssm.py
src/multiprocessing/: utils.py
src/training/: train_ssm.py
src/utils/: imutable_dict.py
src/visualizations/: vis_utils.py
tests/: test_algorithms.py  test_data_sets.py  test_logging.py  test_models.py
(+43 files in other folders)
