[tool.poetry]
name = "sequencemodellab"
version = "0.1.0"
description = ""
authors = ["YuvalMilo <yuv.milo@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/YuvMilo/SequenceModelLab"
repository = "https://github.com/YuvMilo/SequenceModelLab"
keywords = ["S4","Sequence Models"]

[tool.poetry.dependencies]
python = "^3.8.1"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"
flake8-import-order = "^0.18.2"
safety = "^2.3.5"
nox = "^2022.11.21"
pytest = "^7.2.0"
numpy = "^1.23.2"
pip = "^22.3.1"
torch = "^1.13.1"
collection = "^0.1.6"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
opt-einsum = "^3.3.0"
einops = "^0.6.0"
scipy = "^1.9.3"
colorama = "^0.4.6"
jupyter = "^1.0.0"
ray = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
